MDEV-31836 mysqldump against MYSQL server 8 creates invalid dump

`select * from information_schema.columns` can return columns in any
order, but we need them ordered by the ordinal position